# UXP1A_linda

./: .gitignore  CMakeLists.txt  README.md  SConscript.scons
include/: Token.h  TupleElement.h
include/cli_utils/: cli_utils.h
include/linda_api/: ExclusiveFileAccessor.h  FileAccessException.hpp  LindaApi.h  SystemCallException.hpp  TupleTemplateInfo.h
include/parsing/: ComparerTemplate.h  IntegerComparerTemplate.h  RequiredTypeTemplate.h  Scanner.h  StringComparerTemplate.h  Token.h  TupleParser.h  TupleTemplateElement.h  TupleTemplateElementParser.h
include/parsing/ast/: Operator.h  PunctuationMark.h
include/pipes/: NamedPipe.h  PipeDestroyer.h
include/pipes/exceptions/: NamedPipeException.h  NamedPipeTimeoutException.h
include/pipes/utils/: Signals.h  SystemTimer.h  TimeoutHandler.h
include/tuple_space/: ComparerTemplate.h  IntegerComparerTemplate.h  RequiredTypeTemplate.h  StringComparerTemplate.h  Tuple.h  TupleElement.h  TupleTemplate.h  TupleTemplateElement.h
include/tuple_space/parsing/: Scanner.h  Token.h  TupleParser.h  TupleTemplateElementParser.h
include/tuple_space/parsing/ast/: Operator.h  PunctuationMark.h
include/tuple_space/parsing/exceptions/: ParseException.h  TokenizerException.h
scripts/: main.py  tasks
scripts/tasks_files/: basic  concurrent_read_file  concurrent_read_pipe  concurrent_write  tasks_hard
src/: main.cpp
src/library_src/: ComparerTemplate.cpp  IntegerComparerTemplate.cpp  RequiredTypeTemplate.cpp  StringComparerTemplate.cpp  Token.cpp  Tuple.cpp  TupleElement.cpp  TupleParser.cpp  TupleTemplateElement.cpp
src/library_src/cli_utils/: cli_utils.cpp
src/library_src/linda_api/: LindaApi.cpp
src/library_src/parsing/: Scanner.cpp  Token.cpp  TupleParser.cpp  TupleTemplateElementParser.cpp
src/library_src/parsing/ast/: Operator.cpp  PunctuationMark.cpp
src/library_src/pipes/: NamedPipe.cpp
src/library_src/pipes/utils/: Signals.cpp  SystemTimer.cpp  TimeoutHandler.cpp
src/library_src/tuple_space/: ComparerTemplate.cpp  IntegerComparerTemplate.cpp  RequiredTypeTemplate.cpp  StringComparerTemplate.cpp  Tuple.cpp  TupleElement.cpp  TupleTemplate.cpp  TupleTemplateElement.cpp
src/library_src/tuple_space/parsing/: Scanner.cpp  Token.cpp  TupleParser.cpp  TupleTemplateElementParser.cpp
src/library_src/tuple_space/parsing/ast/: Operator.cpp  PunctuationMark.cpp
src/linda_input/: linda_input.cpp
src/linda_output/: linda_output.cpp  main.cpp
src/linda_read/: linda_read.cpp
tests_src/hello_test/: helloTest.cpp
tests_src/integration_tests/lindaTests/: lindaApiTests.cpp
tests_src/integration_tests/pipe_test/: pipeTest.cpp  timerTest.cpp
tests_src/parserTest/: parserTest.cpp  tupleTemplatesTest.cpp
tests_src/pipe_test/: pipeTest.cpp  timerTest.cpp
tests_src/unit_tests/lindaTests/: lindaApiTests.cpp
tests_src/unit_tests/parserTest/: astToStringTest.cpp  parserTest.cpp  tupleTemplatesTest.cpp
tests_src/unit_tests/tuple_test/: parserTest.cpp  toStringTest.cpp  tupleTemplatesTest.cpp
